fix for overlap issue added flex

--- a/my-app/public/css/app.css
+++ b/my-app/public/css/app.css
@@ -788,6 +788,12 @@ select {
 .top-\[30px\] {
   top: 30px;
 }
+.-left-\[20px\] {
+  left: -20px;
+}
+.-left-\[22px\] {
+  left: -22px;
+}
 .z-0 {
   z-index: 0;
 }
@@ -875,6 +881,18 @@ select {
 .mt-\[-110px\] {
   margin-top: -110px;
 }
+.mt-\[20\%\] {
+  margin-top: 20%;
+}
+.-mt-\[20\%\] {
+  margin-top: -20%;
+}
+.-mt-\[30\%\] {
+  margin-top: -30%;
+}
+.-mt-\[40\%\] {
+  margin-top: -40%;
+}
 .block {
   display: block;
 }
@@ -923,6 +941,9 @@ select {
 .h-px {
   height: 1px;
 }
+.h-auto {
+  height: auto;
+}
 .max-h-\[90vh\] {
   max-height: 90vh;
 }
@@ -931,6 +952,9 @@ select {
 }
 .min-h-screen {
   min-height: 100vh;
+}
+.min-h-\[calc\(100vh\)\] {
+  min-height: calc(100vh);
 }
 .w-10 {
   width: 2.5rem;
@@ -1045,6 +1069,9 @@ select {
 }
 .gap-8 {
   gap: 2rem;
+}
+.overflow-auto {
+  overflow: auto;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -1243,6 +1270,9 @@ select {
 }
 .pt-8 {
   padding-top: 2rem;
+}
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 .text-center {
   text-align: center;
@@ -1459,86 +1489,88 @@ body
     }
 
   }
- @media (max-width: 1024px) {
-  .left-bottom {
-display: none;
-  }
- }
-    @media (max-width: 767px) {
-        .main-block {
-            margin-bottom: 200px;
-        }
-    }
-    @media (max-width: 400px) {
-        .main-block {
-            margin-bottom: 370px;
-        }
-    }
-    .last\:mb-0:last-child {
+
+  .last\:mb-0:last-child {
   margin-bottom: 0px;
 }
-    .hover\:bg-gray-200:hover {
+
+  .hover\:bg-gray-200:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
-    .hover\:bg-gray-600:hover {
+
+  .hover\:bg-gray-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1));
 }
-    .hover\:bg-gray-800:hover {
+
+  .hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
 }
-    .hover\:text-gray-400:hover {
+
+  .hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
-    .hover\:text-gray-500:hover {
+
+  .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
-    .hover\:text-gray-700:hover {
+
+  .hover\:text-gray-700:hover {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
-    .hover\:shadow-lg:hover {
+
+  .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-    .hover\:grayscale-0:hover {
+
+  .hover\:grayscale-0:hover {
   --tw-grayscale: grayscale(0);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
-    .focus\:z-10:focus {
+
+  .focus\:z-10:focus {
   z-index: 10;
 }
-    .focus\:border-blue-300:focus {
+
+  .focus\:border-blue-300:focus {
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity, 1));
 }
-    .focus\:outline-none:focus {
+
+  .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
-    .focus\:ring:focus {
+
+  .focus\:ring:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-    .active\:bg-gray-100:active {
+
+  .active\:bg-gray-100:active {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
 }
-    .active\:text-gray-500:active {
+
+  .active\:text-gray-500:active {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity, 1));
 }
-    .active\:text-gray-700:active {
+
+  .active\:text-gray-700:active {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
-    @media (min-width: 640px) {
+
+  @media (min-width: 640px) {
 
   .sm\:relative {
     position: relative;
@@ -1558,6 +1590,14 @@ display: none;
 
   .sm\:ml-6 {
     margin-left: 1.5rem;
+  }
+
+  .sm\:mt-\[20\%\] {
+    margin-top: 20%;
+  }
+
+  .sm\:mt-\[-20\%\] {
+    margin-top: -20%;
   }
 
   .sm\:block {
@@ -1637,7 +1677,8 @@ display: none;
     font-size: 50px;
   }
 }
-    @media (min-width: 768px) {
+
+  @media (min-width: 768px) {
 
   .md\:static {
     position: static;
@@ -1755,7 +1796,8 @@ display: none;
     font-size: 50px;
   }
 }
-    @media (min-width: 1024px) {
+
+  @media (min-width: 1024px) {
 
   .lg\:z-\[2\] {
     z-index: 2;
@@ -1786,7 +1828,8 @@ display: none;
     padding-top: 5rem;
   }
 }
-    @media (prefers-color-scheme: dark) {
+
+  @media (prefers-color-scheme: dark) {
 
   .dark\:border-gray-700 {
     --tw-border-opacity: 1;
@@ -1818,3 +1861,4 @@ display: none;
     color: rgb(255 255 255 / var(--tw-text-opacity, 1));
   }
 }
+
